ecmascript/parser/tests/test262-error-references/fail/77e5dccd799284ee.module.js.stderr
error: Unexpected token
 --> $DIR/tests/test262-parser/fail/77e5dccd799284ee.module.js:1:16
  |
1 | export default default
  |                ^^^^^^^

